--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 /*  your css code here. If applicable */
 table{
 	background-color: yellow;
+	border:1px solid black;
 }
 th, td, tr {
     border: 1px solid black;
